// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSourcesEditForm /> should display an error with an empty source name 1`] = `
Array [
  "",
  .emotion-131 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-0 {
  margin-top: 0;
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-9 {
  width: 470px;
  padding-bottom: 24px;
}

.emotion-1 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-4 {
  position: relative;
}

.emotion-47 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-19 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-18:hover div,
.emotion-18:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-18:hover button,
.emotion-18:focus-within button {
  color: #ffffff;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-17 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-17:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-11:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-16 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-12 {
  font-size: 15px;
  line-height: 19px;
  padding-bottom: 8px;
}

.emotion-13 {
  padding-bottom: 8px;
}

.emotion-20 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-21 {
  clear: both;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-22 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-24 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-23 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-26 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 24px;
}

.emotion-27 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-36 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
  padding-bottom: 16px;
  padding-left: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-39 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-41 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-40 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
  fill: #73b61c;
}

.emotion-48 {
  height: 8px;
}

.emotion-50 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-59 {
  padding-top: 16px;
}

.emotion-58 {
  border-radius: 2px;
  background-color: #3b3b3b;
}

.emotion-58:hover summary svg {
  opacity: 1;
}

.emotion-54 {
  list-style-type: none;
  padding: 16px;
  background-color: #3b3b3b;
}

.emotion-54::-webkit-details-marker {
  display: none;
}

.emotion-54:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-51 {
  color: #808080;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-52 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 16px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-57 {
  border-top: 1px solid #4a4a4a;
  padding: 32px;
  padding-top: 16px;
}

.emotion-55 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-56 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-56 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-56 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-127 {
  padding-top: 16px;
}

.emotion-61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.emotion-64 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-92 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-65 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-66 {
  clear: both;
}

.emotion-91 {
  width: 100%;
  color: #ffffff;
  text-align: left;
}

.emotion-91 th,
.emotion-91 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-91 th:first-of-type,
.emotion-91 td:first-of-type {
  padding-left: 16px;
}

.emotion-91 th:nth-of-type(2),
.emotion-91 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-91 th:nth-of-type(3),
.emotion-91 td:nth-of-type(3) {
  width: 100%;
}

.emotion-91 th {
  color: #b3b3b3;
  font-weight: 500;
}

.emotion-91 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-91 td:first-of-type {
  border: none;
}

.emotion-91 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-91 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-91 tr:hover + tr td {
  border-top-color: transparent;
}

.emotion-91 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-91 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-72 {
  cursor: not-allowed;
}

.emotion-71 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-78 {
  cursor: pointer;
}

.emotion-130 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-130 button,
.emotion-130 a {
  margin-right: 16px;
}

.emotion-128 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-128:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-128[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-128,
.emotion-128:hover,
.emotion-128:visited {
  background-color: #808080;
}

.emotion-128:hover {
  background-color: #b3b3b3;
}

.emotion-128[aria-disabled=true] {
  background-color: #808080;
}

.emotion-129 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-129:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-129[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-129,
.emotion-129:hover,
.emotion-129:visited {
  background-color: #73b61c;
}

.emotion-129:hover {
  background-color: #96c955;
}

.emotion-129[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-5 {
  color: #c92300;
  font-style: italic;
}

<form
    action=""
    className="emotion-131"
    method="post"
    onSubmit={[Function]}
  >
    <p
      className="emotion-0"
    >
      Additional file types or analysis modules can be added to this data source. All previous selections will remain constant and cannot be modified.
    </p>
    <div
      className="emotion-9"
    >
      <h3
        className="emotion-1"
      >
        Data Source Name 
      </h3>
      <div
        className="emotion-6"
      >
        <label
          className="emotion-2"
          htmlFor="name"
        >
          Name
        </label>
        <div
          className="emotion-4"
        >
          <input
            autoFocus={true}
            className="emotion-3"
            disabled={false}
            id="name"
            name="name"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-6"
        >
          <span
            className="emotion-5"
          >
            Name cannot be empty
          </span>
           
        </div>
      </div>
      <h3
        className="emotion-1"
      >
        Storage Address: gs://zorroa-dev-data/images
      </h3>
    </div>
    <fieldset
      className="emotion-47"
    >
      <legend
        className="emotion-19"
      >
        Add Additional File Types
        <div
          className="emotion-18"
        >
          <button
            aria-details="SupportedFile Types"
            aria-label="Supported File Types"
            className="emotion-10"
            type="button"
          >
            <svg
              data-file-name="help.svg"
              height={20}
            />
          </button>
          <div
            className="emotion-17"
            id="SupportedFile Types"
            role="tooltip"
          >
            <div
              className="emotion-11"
            />
            <div
              className="emotion-16"
            >
              <h3
                className="emotion-12"
              >
                Supported File Types
              </h3>
              <div
                className="emotion-13"
              >
                <h4>
                  Images
                  :
                </h4>
                GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
              </div>
              <div
                className="emotion-13"
              >
                <h4>
                  Documents
                  :
                </h4>
                PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
              </div>
              <div
                className="emotion-13"
              >
                <h4>
                  Videos
                  :
                </h4>
                MP4, M4V, MOV, MPG, MPEG, OGG
              </div>
            </div>
          </div>
        </div>
      </legend>
      <div
        className="emotion-20"
      >
        <div>
          Additional file types can be added to this data source. Previous selections cannot be removed.
        </div>
      </div>
      <div
        className="emotion-21"
      />
      <label
        className="emotion-29"
      >
        <div
          className="emotion-25"
        >
          <input
            className="emotion-22"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="Images"
          />
          <div
            className="emotion-24"
          >
            <svg
              className="emotion-23"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-26"
        >
          <img
            alt="Image Files"
            src="/icons/images.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-28"
        >
          <span
            className="emotion-27"
          >
            Image Files
          </span>
        </div>
      </label>
      <label
        className="emotion-29"
      >
        <div
          className="emotion-25"
        >
          <input
            className="emotion-22"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="Documents"
          />
          <div
            className="emotion-24"
          >
            <svg
              className="emotion-23"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-26"
        >
          <img
            alt="Documents (PDF & MS Office)"
            src="/icons/documents.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-28"
        >
          <span
            className="emotion-27"
          >
            Documents (PDF & MS Office)
          </span>
          <span
            className="emotion-36"
          >
            Pages will be processed and counted as individual assets
          </span>
        </div>
      </label>
      <label
        className="emotion-46"
      >
        <div
          className="emotion-25"
        >
          <input
            className="emotion-39"
            defaultChecked={true}
            onClick={[Function]}
            type="checkbox"
            value="Videos"
          />
          <div
            className="emotion-41"
          >
            <svg
              className="emotion-40"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-26"
        >
          <img
            alt="Video Files"
            src="/icons/videos.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-28"
        >
          <span
            className="emotion-27"
          >
            Video Files
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-48"
    />
    <h3
      className="emotion-1"
    >
      Add Additional Analysis
    </h3>
    <p
      className="emotion-50"
    >
      Additional analysis can be added to this data source. Previous selections cannot be removed.
    </p>
    <div
      className="emotion-59"
    >
      <details
        className="emotion-58"
        onToggle={[Function]}
        open={true}
      >
        <summary
          aria-label="Zorroa Automatic Analysis"
          className="emotion-54"
        >
          <div
            className="emotion-53"
          >
            <svg
              className="emotion-51"
              data-file-name="chevron.svg"
              height={20}
            />
            <span
              className="emotion-52"
            >
              Zorroa Automatic Analysis
            </span>
          </div>
        </summary>
        <div
          className="emotion-57"
        >
          <p
            className="emotion-55"
          >
            The following basic analysis is applied to all data sets.
          </p>
          <ul
            className="emotion-56"
          >
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  File Introspection
                </span>
                <br />
                Extracts native metadata from file.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Similarity Hash
                </span>
                <br />
                Adds a hash to all images used to quantify the similarity between images.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Proxy Creation
                </span>
                <br />
                Creates proxy files suitable for web streaming for all media.
              </div>
            </li>
          </ul>
        </div>
      </details>
    </div>
    <div
      className="emotion-127"
    >
      <details
        className="emotion-58"
        onToggle={[Function]}
        open={true}
      >
        <summary
          aria-label="zorroa"
          className="emotion-54"
        >
          <div
            className="emotion-53"
          >
            <svg
              className="emotion-51"
              data-file-name="chevron.svg"
              height={20}
            />
            <span
              className="emotion-61"
            >
              <img
                alt="zorroa"
                height={32}
                src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
              />
            </span>
          </div>
        </summary>
        <div
          className="emotion-57"
        >
          <p
            className="emotion-64"
          >
            These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
          </p>
          <fieldset
            className="emotion-92"
          >
            <legend
              className="emotion-65"
            >
              Visual Intelligence
            </legend>
            <div
              className="emotion-66"
            />
            <table
              cellSpacing="0"
              className="emotion-91"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-72"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-39"
                          defaultChecked={true}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-label-detection"
                        />
                        <div
                          className="emotion-41"
                        >
                          <svg
                            className="emotion-40"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-label-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-label-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-78"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-22"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-object-detection"
                        />
                        <div
                          className="emotion-24"
                        >
                          <svg
                            className="emotion-23"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-object-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-object-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-78"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-22"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-label-detection"
                        />
                        <div
                          className="emotion-24"
                        >
                          <svg
                            className="emotion-23"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-label-detection
                        : 
                        Generate keyword labels for image, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-label-detection
                  </td>
                  <td>
                    Generate keyword labels for image, video, and documents.
                  </td>
                </tr>
                <tr
                  className="emotion-78"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-22"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-object-detection"
                        />
                        <div
                          className="emotion-24"
                        >
                          <svg
                            className="emotion-23"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-object-detection
                        : 
                        Detect everyday objects in images, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-object-detection
                  </td>
                  <td>
                    Detect everyday objects in images, video, and documents.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-92"
          >
            <legend
              className="emotion-65"
            >
              Zorroa Timeline Extraction
            </legend>
            <div
              className="emotion-66"
            />
            <table
              cellSpacing="0"
              className="emotion-91"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-78"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-22"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-document-page-clips"
                        />
                        <div
                          className="emotion-24"
                        >
                          <svg
                            className="emotion-23"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-document-page-clips
                        : 
                        Extract all pages in MS Office/PDF documents into separate assets.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-document-page-clips
                  </td>
                  <td>
                    Extract all pages in MS Office/PDF documents into separate assets.
                  </td>
                </tr>
                <tr
                  className="emotion-78"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-22"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-image-page-clips"
                        />
                        <div
                          className="emotion-24"
                        >
                          <svg
                            className="emotion-23"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-image-page-clips
                        : 
                        Extract all layers in multi page image formats such as tiff and psd as as separate assets
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-image-page-clips
                  </td>
                  <td>
                    Extract all layers in multi page image formats such as tiff and psd as as separate assets
                  </td>
                </tr>
                <tr
                  className="emotion-78"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-22"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-video-shot-clips"
                        />
                        <div
                          className="emotion-24"
                        >
                          <svg
                            className="emotion-23"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-video-shot-clips
                        : 
                        Break video files into individual assets based on a shot detection algorithm.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-video-shot-clips
                  </td>
                  <td>
                    Break video files into individual assets based on a shot detection algorithm.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-92"
          >
            <legend
              className="emotion-65"
            >
              Zorroa Visual Intelligence
            </legend>
            <div
              className="emotion-66"
            />
            <table
              cellSpacing="0"
              className="emotion-91"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-78"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-71"
                    >
                      <div
                        className="emotion-25"
                      >
                        <input
                          className="emotion-22"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-text-detection"
                        />
                        <div
                          className="emotion-24"
                        >
                          <svg
                            className="emotion-23"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-text-detection
                        : 
                        Utilize OCR technology to detect text on an image.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-text-detection
                  </td>
                  <td>
                    Utilize OCR technology to detect text on an image.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
        </div>
      </details>
    </div>
    <div
      className="emotion-130"
    >
      <a
        className="emotion-128"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cancel
      </a>
      <button
        aria-disabled={true}
        className="emotion-129"
        onClick={[Function]}
        type="submit"
      >
        Update Data Source
      </button>
    </div>
  </form>,
]
`;

exports[`<DataSourcesEditForm /> should render properly 1`] = `
Array [
  "",
  .emotion-130 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-0 {
  margin-top: 0;
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-8 {
  width: 470px;
  padding-bottom: 24px;
}

.emotion-1 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-4 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-46 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-18 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-17:hover div,
.emotion-17:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-17:hover button,
.emotion-17:focus-within button {
  color: #ffffff;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-16 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-16:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-10:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-15 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-11 {
  font-size: 15px;
  line-height: 19px;
  padding-bottom: 8px;
}

.emotion-12 {
  padding-bottom: 8px;
}

.emotion-19 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-20 {
  clear: both;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-21 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-23 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-22 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-25 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 24px;
}

.emotion-26 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-35 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
  padding-bottom: 16px;
  padding-left: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-38 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-40 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-39 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
  fill: #73b61c;
}

.emotion-47 {
  height: 8px;
}

.emotion-49 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-58 {
  padding-top: 16px;
}

.emotion-57 {
  border-radius: 2px;
  background-color: #3b3b3b;
}

.emotion-57:hover summary svg {
  opacity: 1;
}

.emotion-53 {
  list-style-type: none;
  padding: 16px;
  background-color: #3b3b3b;
}

.emotion-53::-webkit-details-marker {
  display: none;
}

.emotion-53:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-50 {
  color: #808080;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-51 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 16px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-56 {
  border-top: 1px solid #4a4a4a;
  padding: 32px;
  padding-top: 16px;
}

.emotion-54 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-55 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-55 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-55 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-126 {
  padding-top: 16px;
}

.emotion-60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.emotion-63 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-91 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-64 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-65 {
  clear: both;
}

.emotion-90 {
  width: 100%;
  color: #ffffff;
  text-align: left;
}

.emotion-90 th,
.emotion-90 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-90 th:first-of-type,
.emotion-90 td:first-of-type {
  padding-left: 16px;
}

.emotion-90 th:nth-of-type(2),
.emotion-90 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-90 th:nth-of-type(3),
.emotion-90 td:nth-of-type(3) {
  width: 100%;
}

.emotion-90 th {
  color: #b3b3b3;
  font-weight: 500;
}

.emotion-90 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-90 td:first-of-type {
  border: none;
}

.emotion-90 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-90 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-90 tr:hover + tr td {
  border-top-color: transparent;
}

.emotion-90 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-90 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-71 {
  cursor: not-allowed;
}

.emotion-70 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-77 {
  cursor: pointer;
}

.emotion-129 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-129 button,
.emotion-129 a {
  margin-right: 16px;
}

.emotion-127 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-127:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-127[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-127,
.emotion-127:hover,
.emotion-127:visited {
  background-color: #808080;
}

.emotion-127:hover {
  background-color: #b3b3b3;
}

.emotion-127[aria-disabled=true] {
  background-color: #808080;
}

.emotion-128 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-128:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-128[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-128,
.emotion-128:hover,
.emotion-128:visited {
  background-color: #73b61c;
}

.emotion-128:hover {
  background-color: #96c955;
}

.emotion-128[aria-disabled=true] {
  background-color: #808080;
}

<form
    action=""
    className="emotion-130"
    method="post"
    onSubmit={[Function]}
  >
    <p
      className="emotion-0"
    >
      Additional file types or analysis modules can be added to this data source. All previous selections will remain constant and cannot be modified.
    </p>
    <div
      className="emotion-8"
    >
      <h3
        className="emotion-1"
      >
        Data Source Name 
      </h3>
      <div
        className="emotion-5"
      >
        <label
          className="emotion-2"
          htmlFor="name"
        >
          Name
        </label>
        <div
          className="emotion-4"
        >
          <input
            autoFocus={true}
            className="emotion-3"
            disabled={false}
            id="name"
            name="name"
            onChange={[Function]}
            type="text"
            value="test"
          />
        </div>
        <div
          className="emotion-5"
        >
           
        </div>
      </div>
      <h3
        className="emotion-1"
      >
        Storage Address: gs://zorroa-dev-data/images
      </h3>
    </div>
    <fieldset
      className="emotion-46"
    >
      <legend
        className="emotion-18"
      >
        Add Additional File Types
        <div
          className="emotion-17"
        >
          <button
            aria-details="SupportedFile Types"
            aria-label="Supported File Types"
            className="emotion-9"
            type="button"
          >
            <svg
              data-file-name="help.svg"
              height={20}
            />
          </button>
          <div
            className="emotion-16"
            id="SupportedFile Types"
            role="tooltip"
          >
            <div
              className="emotion-10"
            />
            <div
              className="emotion-15"
            >
              <h3
                className="emotion-11"
              >
                Supported File Types
              </h3>
              <div
                className="emotion-12"
              >
                <h4>
                  Images
                  :
                </h4>
                GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
              </div>
              <div
                className="emotion-12"
              >
                <h4>
                  Documents
                  :
                </h4>
                PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
              </div>
              <div
                className="emotion-12"
              >
                <h4>
                  Videos
                  :
                </h4>
                MP4, M4V, MOV, MPG, MPEG, OGG
              </div>
            </div>
          </div>
        </div>
      </legend>
      <div
        className="emotion-19"
      >
        <div>
          Additional file types can be added to this data source. Previous selections cannot be removed.
        </div>
      </div>
      <div
        className="emotion-20"
      />
      <label
        className="emotion-28"
      >
        <div
          className="emotion-24"
        >
          <input
            className="emotion-21"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="Images"
          />
          <div
            className="emotion-23"
          >
            <svg
              className="emotion-22"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-25"
        >
          <img
            alt="Image Files"
            src="/icons/images.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-27"
        >
          <span
            className="emotion-26"
          >
            Image Files
          </span>
        </div>
      </label>
      <label
        className="emotion-28"
      >
        <div
          className="emotion-24"
        >
          <input
            className="emotion-21"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="Documents"
          />
          <div
            className="emotion-23"
          >
            <svg
              className="emotion-22"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-25"
        >
          <img
            alt="Documents (PDF & MS Office)"
            src="/icons/documents.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-27"
        >
          <span
            className="emotion-26"
          >
            Documents (PDF & MS Office)
          </span>
          <span
            className="emotion-35"
          >
            Pages will be processed and counted as individual assets
          </span>
        </div>
      </label>
      <label
        className="emotion-45"
      >
        <div
          className="emotion-24"
        >
          <input
            className="emotion-38"
            defaultChecked={true}
            onClick={[Function]}
            type="checkbox"
            value="Videos"
          />
          <div
            className="emotion-40"
          >
            <svg
              className="emotion-39"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-25"
        >
          <img
            alt="Video Files"
            src="/icons/videos.png"
            width="40px"
          />
        </div>
        <div
          className="emotion-27"
        >
          <span
            className="emotion-26"
          >
            Video Files
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-47"
    />
    <h3
      className="emotion-1"
    >
      Add Additional Analysis
    </h3>
    <p
      className="emotion-49"
    >
      Additional analysis can be added to this data source. Previous selections cannot be removed.
    </p>
    <div
      className="emotion-58"
    >
      <details
        className="emotion-57"
        onToggle={[Function]}
        open={true}
      >
        <summary
          aria-label="Zorroa Automatic Analysis"
          className="emotion-53"
        >
          <div
            className="emotion-52"
          >
            <svg
              className="emotion-50"
              data-file-name="chevron.svg"
              height={20}
            />
            <span
              className="emotion-51"
            >
              Zorroa Automatic Analysis
            </span>
          </div>
        </summary>
        <div
          className="emotion-56"
        >
          <p
            className="emotion-54"
          >
            The following basic analysis is applied to all data sets.
          </p>
          <ul
            className="emotion-55"
          >
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  File Introspection
                </span>
                <br />
                Extracts native metadata from file.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Similarity Hash
                </span>
                <br />
                Adds a hash to all images used to quantify the similarity between images.
              </div>
            </li>
            <li>
              <svg
                data-file-name="checkmark.svg"
              />
              <div>
                <span>
                  Proxy Creation
                </span>
                <br />
                Creates proxy files suitable for web streaming for all media.
              </div>
            </li>
          </ul>
        </div>
      </details>
    </div>
    <div
      className="emotion-126"
    >
      <details
        className="emotion-57"
        onToggle={[Function]}
        open={true}
      >
        <summary
          aria-label="zorroa"
          className="emotion-53"
        >
          <div
            className="emotion-52"
          >
            <svg
              className="emotion-50"
              data-file-name="chevron.svg"
              height={20}
            />
            <span
              className="emotion-60"
            >
              <img
                alt="zorroa"
                height={32}
                src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
              />
            </span>
          </div>
        </summary>
        <div
          className="emotion-56"
        >
          <p
            className="emotion-63"
          >
            These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
          </p>
          <fieldset
            className="emotion-91"
          >
            <legend
              className="emotion-64"
            >
              Visual Intelligence
            </legend>
            <div
              className="emotion-65"
            />
            <table
              cellSpacing="0"
              className="emotion-90"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-71"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-38"
                          defaultChecked={true}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-label-detection"
                        />
                        <div
                          className="emotion-40"
                        >
                          <svg
                            className="emotion-39"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-label-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-label-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-77"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-21"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="gcp-object-detection"
                        />
                        <div
                          className="emotion-23"
                        >
                          <svg
                            className="emotion-22"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        gcp-object-detection
                        : 
                        Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                      </div>
                    </label>
                  </td>
                  <td>
                    gcp-object-detection
                  </td>
                  <td>
                    Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                  </td>
                </tr>
                <tr
                  className="emotion-77"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-21"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-label-detection"
                        />
                        <div
                          className="emotion-23"
                        >
                          <svg
                            className="emotion-22"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-label-detection
                        : 
                        Generate keyword labels for image, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-label-detection
                  </td>
                  <td>
                    Generate keyword labels for image, video, and documents.
                  </td>
                </tr>
                <tr
                  className="emotion-77"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-21"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-object-detection"
                        />
                        <div
                          className="emotion-23"
                        >
                          <svg
                            className="emotion-22"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-object-detection
                        : 
                        Detect everyday objects in images, video, and documents.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-object-detection
                  </td>
                  <td>
                    Detect everyday objects in images, video, and documents.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-91"
          >
            <legend
              className="emotion-64"
            >
              Zorroa Timeline Extraction
            </legend>
            <div
              className="emotion-65"
            />
            <table
              cellSpacing="0"
              className="emotion-90"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-77"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-21"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-document-page-clips"
                        />
                        <div
                          className="emotion-23"
                        >
                          <svg
                            className="emotion-22"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-document-page-clips
                        : 
                        Extract all pages in MS Office/PDF documents into separate assets.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-document-page-clips
                  </td>
                  <td>
                    Extract all pages in MS Office/PDF documents into separate assets.
                  </td>
                </tr>
                <tr
                  className="emotion-77"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-21"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-image-page-clips"
                        />
                        <div
                          className="emotion-23"
                        >
                          <svg
                            className="emotion-22"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-image-page-clips
                        : 
                        Extract all layers in multi page image formats such as tiff and psd as as separate assets
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-image-page-clips
                  </td>
                  <td>
                    Extract all layers in multi page image formats such as tiff and psd as as separate assets
                  </td>
                </tr>
                <tr
                  className="emotion-77"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-21"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-video-shot-clips"
                        />
                        <div
                          className="emotion-23"
                        >
                          <svg
                            className="emotion-22"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-video-shot-clips
                        : 
                        Break video files into individual assets based on a shot detection algorithm.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-video-shot-clips
                  </td>
                  <td>
                    Break video files into individual assets based on a shot detection algorithm.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
          <fieldset
            className="emotion-91"
          >
            <legend
              className="emotion-64"
            >
              Zorroa Visual Intelligence
            </legend>
            <div
              className="emotion-65"
            />
            <table
              cellSpacing="0"
              className="emotion-90"
            >
              <thead>
                <tr>
                  <th>
                     
                  </th>
                  <th>
                    Module Name
                  </th>
                  <th>
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  className="emotion-77"
                  onClick={[Function]}
                >
                  <td>
                    <label
                      className="emotion-70"
                    >
                      <div
                        className="emotion-24"
                      >
                        <input
                          className="emotion-21"
                          defaultChecked={false}
                          onClick={[Function]}
                          type="checkbox"
                          value="zvi-text-detection"
                        />
                        <div
                          className="emotion-23"
                        >
                          <svg
                            className="emotion-22"
                            data-file-name="checkmark.svg"
                            height={20}
                          />
                        </div>
                      </div>
                      <div
                        className="hidden"
                      >
                        zvi-text-detection
                        : 
                        Utilize OCR technology to detect text on an image.
                      </div>
                    </label>
                  </td>
                  <td>
                    zvi-text-detection
                  </td>
                  <td>
                    Utilize OCR technology to detect text on an image.
                  </td>
                </tr>
              </tbody>
            </table>
          </fieldset>
        </div>
      </details>
    </div>
    <div
      className="emotion-129"
    >
      <a
        className="emotion-127"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cancel
      </a>
      <button
        className="emotion-128"
        onClick={[Function]}
        type="submit"
      >
        Update Data Source
      </button>
    </div>
  </form>,
]
`;
